:bug: Truncate long names in resource cards
Closes #353

--- a/src/styl/buildingBlocks.styl
+++ b/src/styl/buildingBlocks.styl
@@ -305,6 +305,7 @@
         color background
 .aCard-Properties
     flex 1 1 auto
+    overflow hidden
     > .date
         display none
     span
